--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,9 @@
     "no-unused-expressions": "off",
     "react/jsx-filename-extension": [1, {"extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
+    "import/no-duplicates": "off",
+    "camelcase": "off",
+    "@typescript-eslint/camelcase": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
